--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,11 @@
     <title>Home Page</title>
   </head>
   <body>
+    <%- include('./partials/_navbar.ejs') %>
     <% if (user) { %>
       <h1>Welcome to the app, <%= user.username %>!</h1>
-      <p>
-        <!-- new sign out link -->
-        <a href="/auth/sign-out">Sign out</a>
-      </p>
-      <% } else { %>
-      <h1>Welcome to the app, guest.</h1>
-      <p>
-        <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">Sign in</a>.
-      </p>
-      <% } %>      
+    <% }else{ %>
+      <h1>Welcome to the app, sign in or sign up</h1>
+    <% } %>
   </body>
 </html>
