--- a/views/waitingProjects/index.ejs
+++ b/views/waitingProjects/index.ejs
@@ -10,8 +10,12 @@
   <h1>Welcome to waiting projects</h1>
 
   <% folders.forEach((folder)=>{ %>
-    <h1><%= folder.folderName %></h1>
+    <a href="/waitingProjects/<%= folder._id %>"><%= folder.folderName %></a>
+    <br>
   <% }) %>
+
+  <br>
+  <br>
   <a href="/waitingProjects/new">add a new folder</a>
 </body>
 </html>
