--- a/views/waitingProjects/show.ejs
+++ b/views/waitingProjects/show.ejs
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h1><%= folder.folderName %></h1>
+
+  <br>
+  <br>
+
+  <a href="/waitingProjects/<%= folder._id %>/edit">edit this folder</a>
 </body>
 </html>
