--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -72,7 +72,7 @@
     <br>
     <br>
 
-    <button type="submit">Add folder</button>
+    <button type="submit">Add project</button>
   </form>
 </body>
 </html>
