--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -9,12 +9,12 @@
   <%- include('../partials/_navbar.ejs') %>
   <h1><%= project.name %></h1>
   <br>
-  <a href="/waitingProjects/project/<%= project._id %>/edit">Edit this project</a>
+  <a href="/waitingProjects/<%= folder %>/project/<%= project._id %>/edit">Edit this project</a>
 
   <br>
   <br>
 
-  <form action="/waitingProjects/project/<%= project._id %>?_method=DELETE" method="POST">
+  <form action="/waitingProjects/<%= folder %>/project/<%= project._id %>?_method=DELETE" method="POST">
     <button type="submit">Delete this project</button>
   </form>
 </body>
