added a color input and made it so when a folder is deleted everything inside it is also deleted, as well as fixed the show functionality so every folder only shows its own tasks

--- a/views/waitingProjects/new.ejs
+++ b/views/waitingProjects/new.ejs
@@ -16,7 +16,7 @@
     <br>
 
     <label for="colorCode">color hex code:</label>
-    <input type="text" name="colorCode" id="colorCode" />
+    <input type="color" name="colorCode" id="colorCode" />
 
     <br>
     <br>
