ongoing projects appear alone, waiting projects appear alone

--- a/views/waitingProjects/show.ejs
+++ b/views/waitingProjects/show.ejs
@@ -10,10 +10,11 @@
   <h1><%= folder.folderName %></h1>
 
   <% projects.forEach((project)=>{ %>
+    <% if(project.status==="waiting") {%>
     <a href="/waitingProjects/<%= folder._id %>/project/<%= project._id %>"><%= project.name %></a>
     <br>
     <br>
-  <% }) %>
+  <% }}) %>
 
   <br>
   <br>
