--- a/views/ongoingProjects/index.ejs
+++ b/views/ongoingProjects/index.ejs
@@ -8,5 +8,13 @@
 <body>
   <%- include('../partials/_navbar.ejs') %>
   <h1>Welcome to ongoing projects</h1>
+
+  <% projects.forEach((project)=>{ %>
+    <% if(project.status==="ongoing") {%>
+    <a href="project/<%= project._id %>"><%= project.name %></a>
+    <br>
+    <br>
+  <% }}) %>
+
 </body>
 </html>
