--- a/views/waitingProjects/show.ejs
+++ b/views/waitingProjects/show.ejs
@@ -11,7 +11,7 @@
 
   <% projects.forEach((project)=>{ %>
     <% if(project.status==="waiting") {%>
-    <a href="/waitingProjects/<%= folder._id %>/project/<%= project._id %>"><%= project.name %></a>
+    <a href="/waitingProjects/show/<%= folder._id %>/project/<%= project._id %>"><%= project.name %></a>
     <br>
     <br>
   <% }}) %>
