--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/main.css" />
     <link rel="stylesheet" href="/styles/index.css" />
+
     <title>Home Page</title>
   </head>
   <body>
@@ -15,8 +15,8 @@
       <div class="screen">
         <h1>Welcome to the app, sign in or sign up</h1>
         <div id="links">
-          <a class="log" href="/auth/sign-in">sign in</a>
-          <a class="log" href="/auth/sign-up">sign up</a>
+          <a class="submit" href="/auth/sign-in">sign in</a>
+          <a class="submit" href="/auth/sign-up">sign up</a>
         </div>
       </div>
     <% } %>
