--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/styles/main.css" />
 <link rel="stylesheet" href="/styles/navbar.css" />
+<link rel="stylesheet" href="/styles/sign_in.css" />
 
 <nav>
   <% if(user){ %>
