--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -8,12 +8,19 @@
   <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1>Sign in</h1>
-    <form action="/auth/sign-in" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username" />
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password" />
-      <button type="submit">Sign in</button>
+    <form class="form" action="/auth/sign-in" method="POST">
+
+      <div class="marginTop text">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username" />
+      </div>
+
+      <div class="marginTop text">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" />
+      </div>
+
+      <button class="marginTop text submit btn" type="submit">Sign in</button>
     </form>
   </body>
 </html>
