--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
       <h1><span class="bold"><%= user.username %></span>! your journey begins here!</h1>
     <% }else{ %>
       <div class="screen">
-        <h1>Welcome to the app, sign in or sign up</h1>
+        <h1>Sign up or sign in to start your art journey</h1>
         <div id="links">
           <a class="submit" href="/auth/sign-in">sign in</a>
           <a class="submit" href="/auth/sign-up">sign up</a>
