--- a/views/waitingProjects/index.ejs
+++ b/views/waitingProjects/index.ejs
@@ -7,15 +7,35 @@
 </head>
 <body>
   <%- include('../partials/_navbar.ejs') %>
-  <h1>Welcome to waiting projects</h1>
+  <h1>So many projects await you!</h1>
 
-  <% folders.forEach((folder)=>{ %>
-    <a href="/waitingProjects/<%= folder._id %>"><%= folder.folderName %></a>
-    <br>
-  <% }) %>
+  <div class="flex">
+    <div class="grid">
+      <% folders.forEach((folder)=>{ %>
+        <div class="marginTop">
+          <a class="flexColumn" href="/waitingProjects/<%= folder._id %>">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    
+              <g id="SVGRepo_bgCarrier" stroke-width="0"/>
+              
+              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
+              
+              <g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M2.06935 5.25839C2 5.62595 2 6.06722 2 6.94975V9.25H21.9531C21.8809 8.20117 21.6973 7.51276 21.2305 6.99383C21.1598 6.91514 21.0849 6.84024 21.0062 6.76946C20.1506 6 18.8345 6 16.2021 6H15.8284C14.6747 6 14.0979 6 13.5604 5.84678C13.2651 5.7626 12.9804 5.64471 12.7121 5.49543C12.2237 5.22367 11.8158 4.81578 11 4L10.4497 3.44975C10.1763 3.17633 10.0396 3.03961 9.89594 2.92051C9.27652 2.40704 8.51665 2.09229 7.71557 2.01738C7.52976 2 7.33642 2 6.94975 2C6.06722 2 5.62595 2 5.25839 2.06935C3.64031 2.37464 2.37464 3.64031 2.06935 5.25839ZM21.9978 10.75H2V14C2 17.7712 2 19.6569 3.17157 20.8284C4.34315 22 6.22876 22 10 22H14C17.7712 22 19.6569 22 20.8284 20.8284C22 19.6569 22 17.7712 22 14V11.7979C22 11.4227 21.9978 10.75 21.9978 10.75Z"
+                fill="<%= folder.colorCode %>"/> </g>
+              
+            </svg>
+            <%= folder.folderName %>
+          </a>
+    
+        </div>
+      <% }) %>
+    </div>
+  </div>
+
+
 
   <br>
   <br>
-  <a href="/waitingProjects/new">add a new folder</a>
+  <a class="submit" href="/waitingProjects/new">add a new folder</a>
 </body>
 </html>
