--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
-  margin: 0;
+  margin: 0 15px;
   box-sizing: border-box;
   text-align: center;
   background-color: rgb(254, 234, 199);
@@ -59,6 +59,12 @@ label, input{
   align-items: center;
 }
 
+.flexSpaceBetween{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 150px 150px 150px 150px 150px;
@@ -83,6 +89,7 @@ label, input{
   padding: 10px;
   border: 1.5px rgb(141, 67, 22) solid;
   border-radius: 15px;
+  font-size: medium;
 }
 
 .submit:hover{
