--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -8,23 +8,32 @@
   <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1>Create a new account!</h1>
-    <form action="/auth/sign-up" method="POST">
-      <div class="marginTop">
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" />
-      </div>
 
-      <div class="marginTop">
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" />
+    <div class="flex">
+      <div class="container">
+        <form action="/auth/sign-up" method="POST">
+          <div class="marginTop">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" />
+          </div>
+    
+          <div class="marginTop">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" />
+          </div>
+    
+          <div class="marginTop">
+            <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" name="confirmPassword" id="confirmPassword" />
+          </div>
+    
+          <div class="flex">
+            <button class="marginTop submit" type="submit">Sign up</button>
+          </div>
+        </form>
       </div>
+    </div>
 
-      <div class="marginTop">
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" name="confirmPassword" id="confirmPassword" />
-      </div>
 
-      <button class="marginTop text submit btn" type="submit">Sign up</button>
-    </form>
   </body>
 </html>
