--- a/views/waitingProjects/new.ejs
+++ b/views/waitingProjects/new.ejs
@@ -8,20 +8,28 @@
 <body>
   <%- include('../partials/_navbar.ejs') %>
   <h1>New folder</h1>
-  <form action="/waitingProjects" method="post">
-    <label for="folderName">folder name:</label>
-    <input type="text" name="folderName" id="folderName" />
+  
+  <div class="flex">
+    <div class="container">
+      <form action="/waitingProjects" method="post">
+        <label for="folderName">folder name:</label>
+        <input type="text" name="folderName" id="folderName" />
+    
+        <br>
+        <br>
+    
+        <label for="colorCode">color hex code:</label>
+        <input type="color" name="colorCode" id="colorCode" />
+    
+        <br>
+        <br>
+    
+        <div class="flex">
+          <button class="submit" type="submit">Add folder</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
-    <br>
-    <br>
-
-    <label for="colorCode">color hex code:</label>
-    <input type="color" name="colorCode" id="colorCode" />
-
-    <br>
-    <br>
-
-    <button type="submit">Add folder</button>
-  </form>
 </body>
 </html>
