--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -37,7 +37,7 @@ input, textarea{
   border: 1.5px rgb(141, 67, 22) solid;
 }
 
-label, input, textarea{
+label, input, textarea, p{
   font-family: "Sour Gummy", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -56,7 +56,7 @@ button{
   font-weight: 400;
   font-style: normal;
   color: rgb(141, 67, 22);
-  background-color: rgb(254, 234, 199);
+  background-color: #feeac7;
 }
 
 /* orientation */
@@ -98,6 +98,10 @@ button{
   margin: 0px 15px;
 }
 
+.noMargin{
+  margin: 0;
+}
+
 /* special */
 .container{
   display: flex;
@@ -109,7 +113,7 @@ button{
 
 .submit{
   padding: 10px;
-  border: 1.5px rgb(141, 67, 22) solid;
+  border: 1.5px #8d4316 solid;
   border-radius: 15px;
   font-size: medium;
 }
@@ -130,8 +134,40 @@ button{
 .card{
   width: 80%;
   max-width: 600px;
-  height: 50px;
+  padding: 15px;
   border-radius: 15px;
   background-color: rgb(249, 248, 245);
   box-shadow: 3px 3px #8d4316;
+}
+
+
+.inCardSubmit{
+  padding: 10px;
+  background-color: rgb(141, 67, 22);
+  border-radius: 15px;
+  font-size: medium;
+  border: none;
+  color: rgb(254, 234, 199);
+}
+
+.inCardSubmit:hover{
+  border: 1.5px rgb(141, 67, 22) solid;
+  background-color: rgb(249, 248, 245);
+  color:rgb(141, 67, 22);
+}
+
+/* page specific */
+.important{
+  height: 30px;
+  width: 30px;
+}
+
+.important:hover{
+  border: 1.5px #8d4316 solid;
+  border-radius: 50px;
+}
+
+.importantButton{
+  background-color: rgb(249, 248, 245);
+  border: none;
 }
